pequeña modificacion en el banner de presentacion

--- a/primero/index.html
+++ b/primero/index.html
@@ -98,8 +98,8 @@
 					<div class="bs-slider-overlay">
 					<div class="banner-text container agile-info">
 						<h5 class="tag text-center mb-3 text-uppercase">Somos profesionales </h5>
-						<h1 class="movetxt text-center agile-title text-uppercase">Administramos Servicios</h1>
-						<h2 class="movetxt text-center mb-3 agile-title text-uppercase">Mejores Soluciones</h2>
+						<h1 class="movetxt text-center agile-title text-uppercase">grupo</h1>
+						<h2 class="movetxt text-center mb-3 agile-title text-uppercase">Corredores del Sur</h2>
 						<a class="bt mt-4 text-capitalize" href="#" data-toggle="modal" data-target="#exampleModalCenter" role="button"> leer más
 						</a>
 					</div>
@@ -123,9 +123,9 @@
 				<div class="slider-info bg3 w3-agile-grid">
 					<div class="bs-slider-overlay">
 					<div class="banner-text container agile-info">
-						<h5 class="tag text-center mb-3 text-uppercase">Somos Creactivos</h5>
-						<h4 class="movetxt text-center agile-title text-uppercase">Creamos soluciones</h4>
-						<h4 class="movetxt text-center mb-3 agile-title text-uppercase">Alta Calidad </h4>
+						<h5 class="tag text-center mb-3 text-uppercase">Somos profesionales </h5>
+						<h4 class="movetxt text-center agile-title text-uppercase">grupo</h4>
+						<h4 class="movetxt text-center mb-3 agile-title text-uppercase">corredores del sur</h4>
 						<a class="bt mt-4 text-capitalize" href="#" data-toggle="modal" data-target="#exampleModalCenter" role="button"> leer más
 						</a>
 					</div>
@@ -136,7 +136,7 @@
 				<div class="slider-info bg4 w3-agile-grid">
 					<div class="bs-slider-overlay">
 					<div class="banner-text container agile-info">
-						<h5 class="tag text-center mb-3 text-uppercase">somos tu apoyo</h5>
+						<h5 class="tag text-center mb-3 text-uppercase">Somos tu apoyo</h5>
 						<h4 class="movetxt text-center agile-title text-uppercase">Gente Capacitada</h4>
 						<h4 class="movetxt text-center mb-3 agile-title text-uppercase">Ideas Innovadoras </h4>
 						<a class="bt mt-4 text-capitalize" href="#" data-toggle="modal" data-target="#exampleModalCenter" role="button"> leer más
